--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
   <title>SeguroVPN.com</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<script src="https://kit.fontawesome.com/f1a6e50f06.js" crossorigin="anonymous"></script>
 
 <body>
   <div class="body">
     <div class="first-page">
       <!-- <header class="header"> <img src="./Blue Modern Vpn Service Logo blue.jpg" alt=""></header> -->
-      <h1>The VPN that just works</h1>
+      <h1 class="main">WELCOME</h1>
       <p>Go further with the #1 trusted leader in VPN </p>
       <br>
-      <button class="get">Get SeguroVPN </button>
+      <BR></BR><BR></BR><BR></BR><BR></BR>
+      <h1 class="main1">The VPN that just works</h1>
+      <button class="start1">Get SeguroVPN </button><button class="start2">Learn More</button>
+      <br> <br><br><br><br><br><br>
+      <br><br>
     </div>
     <div class="second-page">
       <div>
-        <img src="./second.jpg" alt="" class="nd-img">
+        <img src="./speed.jpg" alt="" class="nd-img">
       </div>
-      <div>
+      <div class="secure">
         <h3>Secure access, Worldwide</h3>
         <p>connect reliably from anywhere, to anywhere. Our network of high-speed serves across 94 countries puts you in
           control</p>
@@ -43,7 +48,13 @@
           --No matter where you are or what devices you're using, a single SeguroVPN
           subscription has got you covered.</p>
         <br>
-        <button>icons</button>
+        <br>
+        <button class="icon"><i class="fa-brands fa-android"></i></button><button class="icon"><i
+            class="fa-brands fa-apple"></i></button><button class="icon"><i
+            class="fa-brands fa-windows"></i></button><button class="icon"><i
+            class="fa-brands fa-facebook-messenger"></i></button><button class="icon"><i
+            class="fa-brands fa-app-store-ios"></i></button><button class="icon"><i
+            class="fa-brands fa-instagram"></i></button>
         <br>
         <a href="">See all apps ></a>
         <br>
@@ -51,6 +62,7 @@
         <br>
         <button class="get2">Get SeguroVPN </button>
       </div>
+      <br>
     </div>
     <div class="third-page">
       <div>
@@ -72,7 +84,7 @@
     <footer class="first-footer"><a href="#"> See more advantages ></a></footer>
     <h3 class="center">Ultra-fast servers around the globe</h3>
     <div class="fourth-page">
-      <img src="./server.real.jpg" alt="" class="server">
+      <div><img src="./server.real.jpg" alt="" class="server"></div>
       <div class="numbers">
         <h1>160</h1>
         <p>locations</p>
