--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
         <p>unlimited bandwidth</p>
       </div>
     </div>
-    <footer class="second-footer"><a href="#"> See our full list VPN server locations ></a>
-      <br><br><br><br>
-    </footer>
+  </div>
+  <footer class="second-footer"><a href="#"> See our full list VPN server locations ></a>
+    <br><br><br><br>
+  </footer>
   </div>
   <br>
 
