--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="https://kit.fontawesome.com/f1a6e50f06.js" crossorigin="anonymous"></script>
 
 <body>
-  <div class="body">
+  <div class="ALL">
     <div class="first-page">
       <!-- <header class="header"> <img src="./Blue Modern Vpn Service Logo blue.jpg" alt=""></header> -->
       <h1 class="main">WELCOME</h1>
@@ -19,7 +19,7 @@
       <BR></BR><BR></BR><BR></BR><BR></BR>
       <h1 class="main1">The VPN that just works</h1>
       <button class="start1">Get SeguroVPN </button><button class="start2">Learn More</button>
-      <br> <br><br><br><br><br><br>
+      <br> <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       <br><br>
     </div>
     <div class="second-page">
