--- a/index.html
+++ b/index.html
@@ -11,16 +11,30 @@
 
 <body>
   <div class="ALL">
+    <header>
+      <div class="container">
+        <div><img src="./Blue Modern Vpn Service Logo.jpg" alt="" class="main-logo"></div>
+        <div class="container-icon">
+          <!-- <img src="./internet icon.jpeg" alt=""  -->
+        </div>
+        <div class="inner-nav">
+          <ul class="Nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Help</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <div class="first-page">
-      <!-- <header class="header"> <img src="./Blue Modern Vpn Service Logo blue.jpg" alt=""></header> -->
       <h1 class="main">WELCOME</h1>
       <p>Go further with the #1 trusted leader in VPN </p>
       <br>
       <BR></BR><BR></BR><BR></BR><BR></BR>
       <h1 class="main1">The VPN that just works</h1>
       <button class="start1">Get SeguroVPN </button><button class="start2">Learn More</button>
-      <br> <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-      <br><br>
+      <br> <br><br><br><br><br><br><br><br><br><br><br>
+      <br><br><br><br><br>
     </div>
     <div class="second-page">
       <div>
@@ -28,7 +42,8 @@
       </div>
       <div class="secure">
         <h3>Secure access, Worldwide</h3>
-        <p>connect reliably from anywhere, to anywhere. Our network of high-speed serves across 94 countries puts you in
+        <p>connect reliably from anywhere, to anywhere. Our network of high-speed serves across 94 countries puts
+          you in
           control</p>
         <br>
         <button class="get2">Get SeguroVPN </button>
@@ -37,7 +52,8 @@
         <br>
         <br>
         <h3>One click to a safer internet</h3>
-        <p>Going online doesn't have to mean being exposed. Whether you're shopping from your desk or just connecting to
+        <p>Going online doesn't have to mean being exposed. Whether you're shopping from your desk or just
+          connecting to
           a new cafe, your personal information and data more private and secure.</p>
       </div>
       <div><img src="./location2.jpg" alt=""></div>
@@ -99,12 +115,15 @@
     <br><br><br><br>
   </footer>
   </div>
-  <br>
-
-  <div class="last-footer"><button class="last-button">Start Your Risk-Free Trial</button>
-    <p>14-DAYS MONEY BACK GUARANTEE</p>
   </div>
 
+  <div class="last-footer">
+    <div>
+      <button class="last-button">Start Your Risk-Free Trial</button>
+    </div>
+    <div>
+      <p>14-DAYS MONEY BACK GUARANTEE</p>
+    </div>
   </div>
 
 </body>
